--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,55 @@
-cvzone==1.6.1
-librosa==0.11.0
-mediapipe==0.10.21
-numpy==2.2.4
-opencv_contrib_python==4.10.0.84
-opencv_python==4.10.0.84
-pygame==2.6.1
-streamlit==1.41.1
-streamlit_autorefresh==1.0.1
-tensorflow==2.18.0
-tensorflow_hub==0.16.1
-tensorflow_intel==2.18.0
-ultralytics==8.3.55
 absl-py==2.2.2
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
+altair==5.5.0
 async-timeout==5.0.1
 attrs==25.3.0
+blinker==1.9.0
+branca==0.8.1
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 contourpy==1.3.0
 cvzone==1.6.1
 cycler==0.12.1
+decorator==5.2.1
 filelock==3.18.0
 flatbuffers==25.2.10
+folium==0.19.5
 fonttools==4.57.0
 frozenlist==1.5.0
 fsspec==2025.3.2
+future==1.0.0
+geocoder==1.38.1
+geographiclib==2.0
+geopy==2.4.1
+gitdb==4.0.12
+GitPython==3.1.44
 idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
 jax==0.4.30
 jaxlib==0.4.30
 Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+opencv_python==4.10.0.84
+opencv_contrib_python==4.10.0.84
 kiwisolver==1.4.7
+librosa==0.11.0
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 mediapipe==0.10.21
 ml_dtypes==0.5.1
 mpmath==1.3.0
 multidict==6.4.3
+narwhals==1.36.0
 networkx==3.2.1
-numpy==1.26.4
+numpy==2.2.5
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
@@ -54,28 +60,44 @@ propcache==0.3.1
 protobuf==4.25.6
 psutil==7.0.0
 py-cpuinfo==9.0.0
+pyarrow==19.0.1
 pycparser==2.22
+pydeck==0.9.1
 pygame==2.6.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
+ratelim==0.1.6
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.24.0
 scipy==1.13.1
 seaborn==0.13.2
 sentencepiece==0.2.0
 six==1.17.0
+smmap==5.0.2
 sounddevice==0.5.1
+streamlit==1.44.1
+streamlit_autorefresh==1.0.1
+streamlit_folium==0.25.0
 sympy==1.13.1
 telepot==12.7
+tenacity==9.1.2
+toml==0.10.2
 torch==2.6.0
 torchvision==0.21.0
+tornado==6.4.2
+tensorflow==2.18.0
+tensorflow_hub==0.16.1
+tensorflow_intel==2.18.0
+ultralytics==8.3.55
 tqdm==4.67.1
 typing_extensions==4.13.2
 tzdata==2025.2
-ultralytics==8.3.109
 ultralytics-thop==2.0.14
 urllib3==2.4.0
+watchdog==6.0.0
+xyzservices==2025.4.0
 yarl==1.19.0
 zipp==3.21.0
-
